OSX/OSX.css
/* MacButtons */
.platform-win .titleBar-1it3bQ {
    position: fixed;
    top: 1px;
}
.platform-win .winButton-3UMjdg {
    z-index: 999999;
    width: 13px;
    height: 13px;
    border-radius: 10px;
    background: transparent;
    margin-right: 6px;
    top: 5px;
    left: 10px;
}
.platform-win .winButton-3UMjdg:nth-last-child(1) {
    background: #fdbc40;
    order: 2;
}
.platform-win .winButton-3UMjdg:nth-last-child(2) {
    background: #34c749;
    order: 1;
}
.platform-win .winButton-3UMjdg:nth-last-child(3) {
    background: #fc615d;
    order: 3;
}
.platform-win .winButton-3UMjdg:nth-last-child(3) *,
.platform-win .winButton-3UMjdg:nth-last-child(2) *,
.platform-win .winButton-3UMjdg:nth-last-child(1) * {
    display: none;
}
.platform-win html:not(.app-focused) .winButton-3UMjdg {
    background-color: #313131 !important;
}
.platform-win .wordmark-2u86JB {
    position: fixed !important;
}
.platform-win .wordmarkWindows-2dq6rw.wordmark-2u86JB {
    -webkit-app-region: drag;
}

/* Source Code */

#app-mount .app-2rEoOp::before,
#app-mount .app-2CXKsg::before {
    content: "Your version of OSX is outdated.";
    display: var(--version1_0_1, block);
    bottom: 90vh;
    right: 1vw;
    position: absolute;
    padding: 16px 16px;
    background: var(--background-notification);
    backdrop-filter: blur(10px);
    box-shadow: 0 0 0 0.6pt var(--macbuttons-outline-color);
    border-radius: 12px;
    z-index: 9999999;
    cursor: pointer;
    font-weight: 400;
}

.layer-3QrUeG::before,
.layer-86YKbF::before {
    content: "Discord";
    background: linear-gradient(0deg, rgb(41 41 41) 0%, rgb(132 132 132) 1%, rgb(185 185 185) 51%, rgba(228, 230, 228, 1) 98%, rgba(226, 230, 243, 1) 100%);
    display: block;
    color: black;
    font-size: 14px;
    line-height: 32px;
    font-weight: regular;
    text-align: center;
    z-index: 999;
    height: 32px;
    -webkit-app-region: drag;
}

.layer-3QrUeG:not(.baseLayer-35bLyl)::before,
.layer-86YKbF:not(.baseLayer-W6S8cY)::before {
    content: "Discord Preferences";
    background: linear-gradient(0deg, rgb(41 41 41) 0%, rgb(132 132 132) 1%, rgb(185 185 185) 51%, rgba(228, 230, 228, 1) 98%, rgba(226, 230, 243, 1) 100%);
    display: block;
    color: black;
    font-size: 14px;
    line-height: 32px;
    font-weight: regular;
    text-align: center;
    z-index: 99999;
    height: 32px;
    -webkit-app-region: drag;
    border-radius: 8px 8px 0 0;
}

#app-mount .layer-3QrUeG:not(.baseLayer-35bLyl),
#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
    background-color: transparent !important;
    margin: 8rem 12.5rem;
    box-shadow: 5px 10px 20px #1d1d1d9f;
    border-radius: 0 0 8px 8px;
    transition: all 0.1s ease !important;
}

.layer-3QrUeG,
.layer-86YKbF {
    background-color: transparent !important;
    opacity: 1 !important;
}

.layer-3QrUeG.baseLayer-35bLyl.stop-animations,
.layer-86YKbF.baseLayer-W6S8cY.stop-animations {
    margin: 0px !important;
    transform: none !important;
    pointer-events: none !important;
}

.layer-3QrUeG:not(.baseLayer-35bLyl),
.layer-86YKbF:not(.baseLayer-W6S8cY) {
    z-index: 9999;
}

.layer-3QrUeG.baseLayer-35bLyl,
.layer-86YKbF.baseLayer-W6S8cY {
    transform: none !important;
}

.layer-3QrUeG:not(.baseLayer-35bLyl).animating-rRxada,
.layer-86YKbF:not(.baseLayer-W6S8cY).animating-1rIrGV {
    transform: scale(1.001) !important;
    transition: all 0.1s ease-in-out !important;
}

.accountProfileCard-1XCH88,
.accountProfileCard-lbN7n- {
    background: var(--background-secondary);
    box-shadow: 0 0 0 0.6pt var(--macbuttons-outline-color);
    border-radius: 7px;
}

.listItem-2Ig28I .button-Jt-tIg {
    text-transform: capitalize;
    width: 60px !important;
}

.backdrop-1wrmKB,
.backdrop-2ByYRN {
    height: 96%;
    top: 4%;
    position: relative;
}

.container-3auIfb[style="opacity: 1; background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"],
.container-2nx-BQ[style="opacity: 1; background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"] {
    background-color: var(--brand-experiment) !important;
}

.slider-TkfMQL > svg,
.slider-32CRPX > svg {
    display: none;
}

.popoutContainer-1MXdqN,
.popoutContainer-2wbmiM {
    background-color: transparent;
}

.platform-osx .wrapper-3NnKdC,
.platform-win .scroller-1Bvpku,
.platform-osx .wrapper-1_HaEi {
    margin-top: 5px !important;
}

::placeholder,
body,
button,
input,
select,
textarea {
    font-family: var(--font), arial;
}

.menu-3sdvDG,
.menu-1QACrS {
    background: var(--background-floating);
    min-width: 240px;
}

.menu-3sdvDG::before,
.menu-1QACrS::before {
    content: "";
    width: 100%;
    height: 100%;
    z-index: -1;
    backdrop-filter: blur(var(--context-blur));
    border-radius: 7px;
    position: absolute;
    box-shadow: inset 0 0 0 1px var(--context-outline);
}

.userPopout-xaxa6l,
.userPopout-2j1gM4,
.emojiSection-3Fb9ix,
.emojiSection-3QtaWO,
.guildSection-1EoFKd,
.guildSection-2Zyzy8,
.tooltip-2QfLtc,
.tooltip-14MtrL,
.container-2dqNWc,
.container-8Futzw,
.wrapper-2aW0bm,
.wrapper-2vIMkT,
.full-motion .wrapper-2aW0bm:hover,
.full-motion .wrapper-2vIMkT:hover,
.toast-1DEQGy,
.toast-q3Y4wI,
.root-8LYsGj, /* keep-in */
.root-g14mjS, /* keep-in */
.scrollableContainer-2NUZem,
.scrollableContainer-15eg7h,
.betterMessageLinks.Popout {
    background-color: var(--background-floating) !important;
    backdrop-filter: blur(var(--context-blur));
    border-radius: 7px;
    box-shadow: inset 0 0 0 1px var(--context-outline) !important;
}

.body-1Ukv50,
.topSection-13QKHs,
.footer-31IekZ,
.scroller-2qwVWY {
    background-color: transparent !important;
}

.quickswitcher-pKcM9U {
    background-color: transparent !important;
    height: 100%;
}

.guildSection-1EoFKd,
.guildSection-2Zyzy8 {
    position: relative;
}
/* ... */

